--- a/css/styles.css
+++ b/css/styles.css
@@ -262,6 +262,9 @@ a:not([href]):not([class]), a:not([href]):not([class]):hover {
   color: inherit;
   text-decoration: none;
 }
+.footer-text {
+  color: #c7cff9;
+}
 .footer-link {
   color:cornflowerblue;
 }
@@ -10903,7 +10906,7 @@ html {
 header.masthead {
   position: relative;
   overflow:auto;
-  padding-top: calc(3rem + 72px);
+  padding-top: calc(3rem + 50px);
   padding-bottom: 5rem;
   background: linear-gradient(0deg, #071557 0%, #1030c2 100%);
   background-repeat: no-repeat;
